cluster-setup/deploy-app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: capstone
  namespace: default
spec:
  replicas: 3
  selector:
    matchLabels:
      app: capstone
  template:
    metadata:
      labels:
        app: capstone
    spec:
      containers:
        - name: capstone
          image: 466390023253.dkr.ecr.us-west-2.amazonaws.com/capstone:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 81
