cluster-setup/elb.yml
apiVersion: v1
kind: Service
metadata:
  name: capstone
  labels:
    app: capstone
spec:
  ports:
  - port: 81
    targetPort: 81
  selector:
    app: capstone
  type: LoadBalancer
